[package]
name = "xtensa-lx6"
version = "0.1.0"
description = "Low level access for xtensa lx6 processors and peripherals"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["xtensa", "lx6", "register", "peripheral"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/esp-rs/xtensa-lx6"
authors = ["Scott Mabin <scott@mabez.dev>", "Arjan Mels <arjan@mels.email>"]
edition = "2018"
links = "xtensa-lx6" # prevent multiple versions of this crate to be linked together

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r0 = "1.0.0"
bare-metal = { version = "0.2.0", features = ["const-fn"] }