[package]
name = "xtensa-lx"
version = "0.3.0"
description = "Low level access for xtensa lx processors and peripherals"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["xtensa", "lx", "register", "peripheral"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/esp-rs/xtensa-lx"
authors = ["Scott Mabin <scott@mabez.dev>", "Arjan Mels <arjan@mels.email>"]
edition = "2018"
links = "xtensa-lx" # prevent multiple versions of this crate to be linked together

[dependencies]
r0 = "1.0.0"
bare-metal = { version = "0.2.0", features = ["const-fn"] }
spin = "0.9"
mutex-trait = "0.2"

[features]
lx6 = ["ccompare0", "ccompare1", "ccompare2", "ccount"]
lx106 = ["ccompare0", "ccount"]

# CPU configurations, taken from: https://github.com/espressif/xtensa-overlays

# Timers up to 4
ccompare0 = []
ccompare1 = []
ccompare2 = []
ccompare3 = []

# ccount
ccount = []
