[package]
name = "xtensa-lx"
version = "0.6.0"
description = "Low level access for Xtensa LX processors and peripherals"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["xtensa", "lx", "register", "peripheral"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/esp-rs/xtensa-lx"
authors = ["Scott Mabin <scott@mabez.dev>", "Arjan Mels <arjan@mels.email>"]
edition = "2018"

# Prevent multiple versions of this crate to be linked together
links = "xtensa-lx"

[dependencies]
bare-metal = "1.0"
mutex-trait = "0.2"
r0 = "1.0"
spin = "0.9"

[features]
esp32   = ["ccompare0", "ccompare1", "ccompare2", "ccount"]
esp8266 = ["ccompare0", "ccount"]

# CPU configurations, taken from: https://github.com/espressif/xtensa-overlays

# Timers up to 4
ccompare0 = []
ccompare1 = []
ccompare2 = []
ccompare3 = []

# ccount
ccount = []
