[package]
name    = "core-isa-parser"
version = "0.2.0"
authors = [
    "Jesse Braham <jesse@beta7.io>",
    "Björn Quentin <bjoern.quentin@mobile-j.de>",
]
edition     = "2021"
description = "Parse the core-isa.h headers from Espressif's xtensa-overlays repository"
repository  = "https://github.com/esp-rs/xtensa-lx-rt"
license     = "MIT OR Apache-2.0"

[dependencies]
anyhow        = "1.0.86"
enum-as-inner = "0.6.0"
regex         = "1.10.5"
serde         = { version = "1.0.204", features = ["derive"] }
strum         = "0.26.3"
strum_macros  = "0.26.4"
