[package]
name        = "xtensa-lx"
version     = "0.8.0"
edition     = "2021"
description = "Low-level access for Xtensa LX processors and peripherals"
repository  = "https://github.com/esp-rs/xtensa-lx"
license     = "MIT OR Apache-2.0"
categories  = ["embedded", "hardware-support", "no-std"]
keywords    = ["lx", "peripheral", "register", "xtensa"]

# Prevent multiple versions of this crate to be linked together
links = "xtensa-lx"

[package.metadata.docs.rs]
features = ["spin"]

[dependencies]
bare-metal  = "1.0.0"
mutex-trait = "0.2.0"
spin        = { version = "0.9.8", optional = true }

[features]
float-save-restore = []
spin               = ["dep:spin"]
